be/refactor: collect(Collectors.toList()) -> toList() 수정
#68